Avoid horizontal scroll on smaller devices

--- a/src/style.css
+++ b/src/style.css
@@ -30,28 +30,24 @@
     }
    
 }
+
+@media (prefers-reduced-motion: no-preference){
+    :root {
+        scroll-behavior: smooth;
+    }
+    }
     
-
-h1, h2, h3{
-    color: black;
-    font-family: var(--heading-font-family) ;
-    font-weight: bold;
-}
-
-h1{
-    font-size: 76px;
-}
-h2{
-    font-size: 4px;
-}
-
-p{
-    font-family: var(--heading-font-family);
-    font-weight: normal;
-    font-size: 22px;
-    line-height: 30px;
+    @media (min-width: 576px){
+    .d-sm-block {
+        display: block!important;
+    }
+    }
     
-}
+    @media (min-width: 768px){
+    .container, .container-md, .container-sm {
+        max-width: 720px;
+    }
+    }
 
 .hero {
     /* background: var(--secondary-color) ; */
